# aerial_ws

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
configs/sdg/: replicator_defects.json
docs/: AAS_NATIVE_NO_DOCKER.md  AI_SAFETY_BOUNDARIES.md  ARCHITECTURE.md  CHANGES.md  COSMOS_SETUP.md  NVIDIA_TOOLS_INTEGRATION.md  OPERATIONS_CHECKLIST.md  SAFETY_INJECTION_ORDER.md  SAFETY_PROCEDURES.md  SAGE_INSPECTION.md  SIM2REAL_PIPELINE_DEEP.md  TDD_MILESTONE_AI_ISAAC_SIM.md
docs/isaac-sim/: 01-getting-started.md  02-ros2-bridge.md  03-pegasus-integration.md  04-synthetic-data.md  05-pitfalls.md  06-full-stack.md  07-advanced-scenes.md  README.md  assignment-01-fly-and-detect.md
missions/: crane_inspection.yaml  crane_inspection_demo.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/autopilot_interface/share/autopilot_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/autopilot_interface_msgs/share/autopilot_interface_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/autopilot_interface_msgs/share/autopilot_interface_msgs/action/: Orbit.idl  Takeoff.idl
ros2_ws/install/autopilot_interface_msgs/share/autopilot_interface_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  autopilot_interface_msgsConfig.cmake  autopilot_interface_msgs__rosidl_typesupport_cExport.cmake  (+6 more)
ros2_ws/install/mission/lib/mission/: mission
ros2_ws/install/mission/share/mission/: package.ps1  package.sh
ros2_ws/install/pegasus_ai/lib/pegasus_ai/: inference_node  isaac_sim_listener  mock_camera_node  test_publisher  vslam_nav2_mock
ros2_ws/install/pegasus_ai/share/pegasus_ai/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/pegasus_msgs/share/pegasus_msgs/: local_setup.dsv  package.ps1  package.sh
ros2_ws/install/px4_msgs/share/px4_msgs/: package.sh
ros2_ws/install/state_sharing/share/state_sharing/: package.bash  package.zsh
ros2_ws/install/yolo_py/lib/yolo_py/: yolo_py
ros2_ws/install/yolo_py/share/yolo_py/: package.xml
ros2_ws/log/: latest_build
ros2_ws/src/: autopilot_interface  autopilot_interface_msgs  drone_traffic_client  drone_traffic_controller  ground_system  ground_system_msgs  imu_publisher  mission  offboard_control  state_sharing  yolo_py
ros2_ws/src/autopilot_interface/: CMakeLists.txt
ros2_ws/src/autopilot_interface/src/: ardupilot_interface.cpp  ardupilot_interface.hpp  px4_interface.cpp
ros2_ws/src/imu_publisher/: CMakeLists.txt  package.xml
ros2_ws/src/imu_publisher/src/: imu_publisher_node.cpp
ros2_ws/src/offboard_control/: CMakeLists.txt
ros2_ws/src/offboard_control/src/: ardupilot_guided.cpp  ardupilot_guided.hpp  px4_offboard.cpp  px4_offboard.hpp
ros2_ws/src/pegasus_ai/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
ros2_ws/src/pegasus_ai/launch/: inference.launch.py
ros2_ws/src/pegasus_ai/pegasus_ai/: offboard_control_node.py  vslam_nav2_mock.py
ros2_ws/src/pegasus_ai/pegasus_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ros2_ws/src/pegasus_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/pegasus_bringup/launch/: drone_stack.launch.py  pegasus_ai_bringup.launch.py
ros2_ws/src/pegasus_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pegasus_msgs/msg/: InspectionResult.msg  NodeHealth.msg
ros2_ws/src/state_sharing/src/: state_sharing_node.cpp
ros2_ws/src/yolo_py/: setup.py
scripts/: build_port_cranes.py  debug_spawn.py  diagnose_scene.py  focus_drone.py  inspect_defect_reference_pack.py  isaac_sim_integration_test.py  isaac_sim_pegasus_test.py  isaac_sim_replicator_advanced.py  isaac_sim_replicator_advanced_test.py  isaac_sim_replicator_defects.py  isaac_sim_ros2_bridge_test.py  run_foxglove_bridge.sh  run_isaac_sim_container.sh  safety_boundaries.py  setup_container_harbor.py  spawn_drone_px4.py  spawn_pegasus_drone.py
tests/api/: test_api.py
tests/contracts/: test_aas_unification.py  test_all_milestones.py  test_reference_pack_inspector.py  test_sdg_replicator_milestone.py
tests/milestone3/: test_launch.py  test_ros2_integration.py
tests/milestone7/: test_drone_stack.py
tests/safety/: test_safety_boundaries.py
tests/yolo/: test_training.py
(+144 files in other folders)
