[project]
name = "aerial-ai"
version = "0.2.0"
description = "AI defect detection for crane inspection drones — Aerial Autonomy Stack + Isaac Sim"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Pegasus Team", email = "team@pegasus.local"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "cv-bridge>=4.0",
    "ultralytics>=8.1",
    "onnx>=1.15",
    "onnxruntime>=1.16",
    "tensorrt>=8.6",
    "pycuda>=2023.1",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7",
    "black>=23.0",
    "pre-commit>=3.5",
    "pytest-mock>=3.12",
]
jetson = [
    "tensorrt==8.6.*",
    "pycuda==2023.1.*",
    "cupy-cuda12x>=12.0",
]
isaac-sim = []
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "T20",
]
ignore = [
    "S101",
    "T201",
    "B008",
]
per-file-ignores = { "tests/*" = ["S101"], "scripts/*" = ["T201"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
namespace-packages = true
explicit-package-bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "milestone0: Foundation tests",
    "milestone1: Synthetic data generation",
    "milestone2: Model training",
    "milestone3: ROS2 integration",
    "milestone4: Domain randomization hardening",
    "milestone5: Hybrid training",
    "milestone6: Jetson deployment",
    "milestone7: Drone integration (Aerial Autonomy Stack)",
    "milestone8: Final demo",
    "jetson: Requires Jetson hardware",
    "drone: Requires drone hardware",
    "isaac_sim: Requires Isaac Sim",
    "integration: Full system integration",
]

[tool.coverage.run]
source = ["ros2_ws/src"]
omit = ["*/test*", "*_test.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
